--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "cached-bind": "^1.0.0",
     "classnames": "^2.2.5",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
@@ -26,6 +27,7 @@
     "react-dom": "^16.2.0",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
+    "url-loader": "^0.6.2",
     "webpack": "^3.11.0"
   }
 }
