--- a/package.json
+++ b/package.json
@@ -8,26 +8,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack",
-    "prod": "cross-env NODE_ENV=production webpack -p"
+    "prod": "cross-env NODE_ENV=production webpack -p",
+    "start": "webpack-dev-server --hot --inline --progress --color --host 0.0.0.0",
+    "lint": "eslint src/*.js"
   },
-  "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "cached-bind": "^1.0.0",
-    "classnames": "^2.2.5",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "postcss-loader": "^2.1.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0"
-  }
+  "dependencies": {}
 }
