--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "dexie": "^2.0.4",
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
